# cmake_examples

./: .gitignore  README.md  general_script
0_pure_makefile/: Makefile  app  build.sh
0_pure_makefile/_inc/: greeter.h
0_pure_makefile/_src/: greeter.cpp  main.cpp
1_basic_cmake/: C-commands.cmake  CMakeLists.txt  build.sh  format_files.sh
1_basic_cmake/_core/_src/: main.cpp
1_basic_make/: CMakeLists.txt  README.md
1_basic_make/src/: main.cpp
2_multi_source/: CMakeLists.txt  README.md  build.sh
2_multi_source/_core/_inc/: util.h
2_multi_source/_core/_src/: main.cpp  util.cpp
2_multi_source/_inc/: util.h
2_multi_source/_src/: main.cpp  util.cpp
2_multi_source/src/: main.cpp
3_internal_lib/: C-flags.cmake  CMakeLists.txt  README.md  build.sh
3_internal_lib/_core/_src/: main.cpp
3_internal_lib/_inc/: app_config.h
3_internal_lib/_libs/math/: CMakeLists.txt
3_internal_lib/_src/: main.cpp
3_internal_lib/libs/math/: CMakeLists.txt  math.cpp
3_internal_lib/libs/math/_inc/: math.h
3_internal_lib/src/: main.cpp
4_external_manual/: CMakeLists.txt  README.md
4_external_manual/_inc/: app_config.h
4_external_manual/_src/: main.cpp
4_external_manual/src/: main.cpp
4_fetchcontent/: C-commands.cmake  CMakeLists.txt  build.sh
5_fetchcontent/: CMakeLists.txt  README.md
5_fetchcontent/_inc/: app_config.h
5_fetchcontent/_src/: main.cpp
5_fetchcontent/src/: main.cpp
5_fetchcontent_with_gtest/: CMakeLists.txt  flags.cmake
5_fetchcontent_with_gtest/_core/_src/: main.cpp
5_gtest/: C-libs.cmake  CMakeLists.txt  build.sh  format_files.sh  start.sh
5_gtest/_core/_src/: main.cpp
6_presets/: C-libs.cmake  CMakeLists.txt  CMakePresets.json  build.sh  start.sh
6_presets/_core/_src/: main.cpp
6_presets_ninja/: C-test.cmake  CMakeLists.txt  CMakePresets.json  README.md  build.sh
6_presets_ninja/_inc/: tools.h
6_presets_ninja/_src/: main.cpp
6_presets_ninja/src/: main.cpp  tools.cpp
7_full_toolchain/: C-libs.cmake  CMakeLists.txt  CMakePresets.json  README.md  build.sh
7_full_toolchain/_core/_src/: main.cpp
7_full_toolchain/_inc/: app_config.h
7_full_toolchain/_src/: main.cpp
7_full_toolchain/build-win-make/: CMakeCache.txt  Makefile  cmake_install.cmake  main.ii
7_full_toolchain/build-win-make/_libs/math/: Makefile  cmake_install.cmake  main.ii  main.s  math.ii  math.s
7_full_toolchain/libs/analytics/: CMakeLists.txt
7_full_toolchain/libs/analytics/_src/: analytics.cpp
7_full_toolchain/libs/analytics/include/analytics/: analytics.h
7_full_toolchain/libs/core/: CMakeLists.txt
7_full_toolchain/libs/core/include/core/: core.h
7_full_toolchain/libs/core/src/: core.cpp
7_full_toolchain/src/: main.cpp
7_full_toolchain/toolchains/: arm-gcc-toolchain.cmake
7_toolchain/: CMakeLists.txt  CMakePresets.json  build.sh
7_toolchain/_core/_src/: main.cpp
7_toolchain_and_packing/: C-flags.cmake  CMakeLists.txt  CPACK_ADVANCED.md  start.sh
7_toolchain_and_packing/_core/_src/: main.cpp
8_complete_template/: CMakeLists.txt  CMakePresets.json  build.sh  start.sh
8_complete_template/_cmake/: C-flags.cmake  C-packing.cmake
8_complete_template/_core/_src/: main.cpp
8_components_shared/: CMakeLists.txt  README.md  build.sh
8_components_shared/component_a/: CMakeLists.txt
8_components_shared/component_a/_core/_src/: main.cpp
8_components_shared/component_a/_inc/component_a/: service.h
8_components_shared/component_a/_src/: main.cpp  service.cpp
8_components_shared/component_b/: CMakeLists.txt  CMakePresets.json
8_components_shared/component_b/_inc/component_b/: service.h
8_components_shared/component_b/_src/: main.cpp  service.cpp
8_components_shared/lib_shared/: CMakeLists.txt  build.sh
8_components_shared/lib_shared/_inc/shared/: api.h
8_components_shared/lib_shared/_libs/math/: CMakeLists.txt
8_components_shared/lib_shared/_src/: api.cpp
8_components_shared/lib_shared/include/shared/: config.hpp  math.hpp  util.hpp
8_components_shared/lib_shared/src/: config.cpp  math.cpp
components_shared/component_a/: CMakeLists.txt
components_shared/component_a/_test/: test.cpp
components_shared/component_b/: CMakeLists.txt
components_shared/component_b/_test/: test.cpp
